--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -49,7 +49,7 @@ html {
     font-family: IRANS-light;
     font-style: normal;
     font-weight: bold;
-    src: url('../font/light.woff') format('woff');
+    src: url('../font/light1.woff') format('woff');
 }
 
 
@@ -296,6 +296,7 @@ tbody td {
 
 tr {
     display: flex;
+    font-size: 14px;
 }
 
 tbody tr:nth-child(2n+1) {
