fetch edit row data without pernissions

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -286,6 +286,11 @@ th {
     flex: 1;
 }
 
+.mb-3{
+    margin-top: 15px;
+    border-radius: 14px;
+}
+
 thead th {
     font-family: IRANS-bold, roboto, tahoma;
 }
